samples/_failures_safe/1761652987_5721e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84a419a9.c: In function ‘main’:
./samples/SAFE/__tmp_84a419a9.c:131:5: error: expected expression at end of input
  131 |     if (scanf("%d", &choice) !=
      |     ^~
./samples/SAFE/__tmp_84a419a9.c:131:5: error: expected declaration or statement at end of input
